--- a/index.html
+++ b/index.html
@@ -354,19 +354,22 @@
             </div><!--//row-->
             <div class="row text-center">
                 <div class="contact-form col-md-6 col-sm-12 col-xs-12 col-md-offset-3">
-                    <form class="form">
+                    <form class="form" action="https://formspree.io/support@jrummyapps.com" method="POST">
                         <div class="form-group name">
                             <label class="sr-only" for="name">Name</label>
-                            <input id="name" type="text" class="form-control" placeholder="Name:">
+                            <input id="name" name="name" type="text" class="form-control" placeholder="Name:">
                         </div><!--//form-group-->
                         <div class="form-group email">
                             <label class="sr-only" for="email">Email</label>
-                            <input id="email" type="email" class="form-control" placeholder="Email:">
+                            <input id="email" name="_replyto" type="email" class="form-control" placeholder="Email:">
                         </div><!--//form-group-->
                         <div class="form-group message">
                             <label class="sr-only" for="message">Message</label>
-                            <textarea id="message" class="form-control" rows="6" placeholder="Message:"></textarea>
+                            <textarea id="message" name="message" class="form-control" rows="6" placeholder="Message:"></textarea>
                         </div><!--//form-group-->
+                        <input type="text" name="_gotcha" style="display:none" />
+                        <input type="hidden" name="_subject" value="BusyBox for Android" />
+                        <input type="hidden" name="_next" value="http://jrummyapps.com/sentmail.html" />
                         <button type="submit" class="btn btn-lg btn-theme">Send Message</button>
                     </form><!--//form-->
                 </div><!--//contact-form-->
